@@ -107,7 +107,6 @@ EOF
 	echo		'$(gettext_quoted "Loading GNU Mach ...")'
 	multiboot	${kernel} root=device:${GRUB_DEVICE#/dev/} -s
 EOF
-  save_default_entry | sed -e "s/^/\t/"
   prepare_grub_to_access_device ${GRUB_DEVICE} | sed -e "s/^/\t/"
   cat << EOF
 	echo		'$(gettext_quoted "Loading the Hurd ...")'
